# z-play

./: .gitignore  Cargo.toml  rust-toolchain.toml
src/: app.rs  gstreamer_pipeline.rs  http.rs  index.html  inotify.rs  lib.rs  main.rs  media_type.bak  media_type.rs  path_cache.rs  playback_speed.rs  player.rs  random_files.rs  random_files_immich.rs  storage_class.rs  walkdir.rs
src/http/: file_cache.rs  index.html  mod.rs  playlist.rs  queue.rs  serve_dir.rs  transcode.rs
src/pipeline/: event.rs  mod.rs  state.rs  worker.rs
src/ui/: mod.rs  player.rs  queue.rs  roots.rs
