[package]
name = "z-play"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
lto = "fat"
debug = 0

[features]
default = ["app", "http"]
app = ["dep:glib", "dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video", "dep:eframe", "dep:rfd", "dep:keepawake"]
http = ["dep:compio", "dep:cyper-axum", "dep:tower", "dep:axum", "dep:axum-extra", "dep:urlencoding", "dep:serde", "dep:serde_json", "dep:mime_guess", "dep:lru"]
immich = ["dep:serde", "dep:cyper", "dep:http", "dep:camino", "parking_lot/send_guard"]

[dependencies]
dotenv = { version = "0.15", optional = true }

log = "0.4"
env_logger = "0.11"

thiserror = "2.0"
rand = { version = "0.10", features = ["simd_support"] }
rayon = "1.11"
rustc-hash = "2.1"

parking_lot = { version = "0.12", features = ["nightly", "hardware-lock-elision"] }

glib = { version = "0.22", optional = true }
gstreamer = { version = "0.25", optional = true }
gstreamer-app = { version = "0.25", optional = true }
gstreamer-video = { version = "0.25", optional = true }

eframe = { version = "0.33", optional = true }
rfd = { version = "0.17", optional = true }
keepawake = { version = "0.6", optional = true }

# HTTP Server
compio = { version = "0.18", optional = true, features = ["fs"] }
cyper-axum = { version = "0.8", optional = true, features = ["http2"] }

tower = { version = "0.5", optional = true }
axum = { version = "0.8", optional = true, default-features = false, features = ["http1", "http2", "json", "macros"] }
axum-extra = { version = "0.12", optional = true, features = ["query"] }
urlencoding = { version = "2.1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
mime_guess = { version = "2", optional = true }
lru = { version = "0.16", optional = true }

# Immich
cyper = { version = "0.8", optional = true, features = ["json"] }
http = { version = "1", optional = true }
camino = { version = "1", optional = true }

z-sync = { git = "https://github.com/imzacm/z-sync.git", rev = "1e441255526f6bcc3cecd2d97a2ffb246a795859" }

rustix = { version = "1", features = ["fs"] }

futures-util = "0.3"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dependencies.z-queue]
git = "https://github.com/imzacm/z-queue.git"
rev = "524d3466e2f7461486576640e72b9a86807eb6ad"
features = ["map", "triomphe", "rand", "crossbeam-queue", "stream"]
